stopgap, update os

--- a/docs/styles/baseboard.css
+++ b/docs/styles/baseboard.css
@@ -32,6 +32,6 @@ button, details, input, option, select, textarea {
  	cursor: pointer;
 }
 
-textarea:focus, input:focus:not(input[type=button], input[type=checkbox], input[type="image"] input[type=radio], input[type=range], input[type=reset], input[type=submit]) {
+textarea:focus, input:focus:not(input[type=button], input[type=checkbox], input[type="image"], input[type=radio], input[type=range], input[type=reset], input[type=submit]) {
 	cursor: initial;
 }
